# 42_commoncore

./: .gitignore  README.md
Exams/: README.md
M0 - Libft/: Makefile  README.md  ft_calloc.c  ft_isalpha.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstdelone_bonus.c  ft_lstnew_bonus.c  ft_memcmp.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_strdup.c  ft_strlcat.c  ft_strmapi.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  ft_tolower.c
M0 - Libft/tester/: Makefile  README.md  test_additional_functions.c  test_additional_part2.c  test_allocation.c  test_bonus_part1.c  test_bonus_part2.c  test_bonus_part3.c  test_copy.c  test_main.c  test_memory_part1.c  test_memory_part3.c  test_output_part1.c  test_output_part2.c  test_string_part1.c  test_string_part2.c  tester.h  tester_utils_part1.c  tester_utils_part2.c  tester_utils_part3.c
M1 - Born2beroot/: README.md
M1 - ft_printf/: Makefile  README.md
M1 - get_next_line/: Makefile  README.md  get_next_line.c  get_next_line.h  get_next_line_utils.c  get_next_line_utils_bonus.c
M2 - push_swap/: DEFENSE_GUIDE.md  Makefile  README.md  checker.c  ft_utils.c  init_a_to_b.c  main.c  rev_rotate.c  rotate.c  sort_stacks.c  sort_three.c  stack_utils.c  swap.c
Projects/: README.md
Projects/A-Maze-ing/: .flake8  .gitignore  COMMANDS.md  Makefile  README.md  maze.py  mazegen-1.0.0-py3-none-any.whl  output_writer.py  pyproject.toml  requirements.txt  solver.py
Projects/A-Maze-ing/mazegen/: generator.py  solver.py
Projects/A-Maze-ing/tests/: test_config.py  test_generator.py  test_output.py  test_renderer.py  test_solver.py
Projects/Piscine Python/Python Module 08/ex01/: README.md  __init__.py  main.py  pyproject.toml
(+318 files in other folders)
