[tool.poetry]
name = "loading"
version = "1.0.0"
description = "Matrix data analysis — Loading Programs"
authors = ["42 Learner"]
readme = "README.md"
packages = [{ include = "ex01" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pyright = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
